--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Portifólio - Mylle Braga</title>
-    <link rel="icon" href="./images/animation.jpeg" type="image/png">
+    <link rel="icon" href="./animation.jpeg" type="image/png">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <style>
 
 
@@ -45,7 +45,7 @@
                         <a class="nav-link active" href="#contato">Contatos</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link active" href="./anexos/CV - MBRAGA.pdf">CV</a>
+                        <a class="nav-link active" href="./CV - MBRAGA.pdf">CV</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
     <header id="header">
         
         <span class="img-profile">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./images/perfil.jpeg" alt="Mylle Braga">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./perfil.jpeg" alt="Mylle Braga">
         </span>
         <h1>Mylle Christyann Souza Braga</h1>
         
@@ -158,7 +158,7 @@
             <h2 style="margin-bottom: 1.5em">Contatos</h2>
 
             <div>
-                <img src="images/tel.png" alt="telefone">
+                <img src="./tel.png" alt="telefone">
                 <p>
                     <a href="tel:75983519119">
                         (75) 98351-9119
@@ -167,7 +167,7 @@
             </div>
 
             <div>
-                <img src="images/mail.png" alt="email">
+                <img src="./mail.png" alt="email">
                 <p>
                     <a href="mailto:bragamy001@gmail.com">
                         bragamy001gmail.com
