--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header id="header">
         
         <span class="img-profile">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./perfil.jpeg" alt="Mylle Braga">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://github.com/Diego10Rocha.png" alt="Mylle Braga">
         </span>
         <h1>Mylle Christyann Souza Braga</h1>
         
