--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="./animation.jpeg" type="image/png">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <style>
 
 
@@ -45,7 +45,7 @@
                         <a class="nav-link active" href="#contato">Contatos</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link active" href="./CV - MBRAGA.pdf">CV</a>
+                        <a class="nav-link active" href="./attachments/CV - MBRAGA.pdf">CV</a>
                     </li>
                 </ul>
             </div>
@@ -158,7 +158,7 @@
             <h2 style="margin-bottom: 1.5em">Contatos</h2>
 
             <div>
-                <img src="./tel.png" alt="telefone">
+                <img src="./images/tel.png" alt="telefone">
                 <p>
                     <a href="tel:75983519119">
                         (75) 98351-9119
@@ -167,7 +167,7 @@
             </div>
 
             <div>
-                <img src="./mail.png" alt="email">
+                <img src="./images/mail.png" alt="email">
                 <p>
                     <a href="mailto:bragamy001@gmail.com">
                         bragamy001gmail.com
