--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <img src="./images/mail.png" alt="email">
                 <p>
                     <a href="mailto:bragamy001@gmail.com">
-                        bragamy001gmail.com
+                        bragamy001@gmail.com
                     </a>
                 </p>
             </div>
