--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id="sobre">
             <h2 style="margin-top: 1.5em;">Sobre</h2>
             <p>
-                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente Industrial IT na @Pirelli.
+                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente Analista de Dados e Planejamento III na @Boticário.
             </p>
             <p>
                 Sou Analista de Dados e atualmente tenho me dedicado aos estudos na área de Data Science.
