--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente Analista de Dados e Planejamento III na @Boticário.
             </p>
             <p>
-                Sou Analista de Dados e atualmente tenho me dedicado aos estudos na área de Data Science.
+                Minha dedicação atualmente é voltada aos estudos na área de Data Science.
             </p>
             <p>
                 Sou apaixonada pelos alcances da tecnologia e por café. Fascinada por praia, esportes, séries e filmes. 
