--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
         <section id="sobre">
             <h2 style="margin-top: 1.5em;">Sobre</h2>
             <p>
-                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente Analista de Dados e Planejamento III na @Boticário.
+                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente estou atuando como Analista de Dados e Planejamento III na @Boticário.
             </p>
             <p>
-                Minha dedicação atualmente é voltada aos estudos na área de Data Science.
+               Sou apaixonada pelos alcances da tecnologia e por café. Fascinada por praia, esportes, séries e filmes. 
             </p>
-            <p>
-                Sou apaixonada pelos alcances da tecnologia e por café. Fascinada por praia, esportes, séries e filmes. 
+            <p> 
+                Atualmente tenho me dedicado ao estudo nas áreas de Data Science and Data Analysis.
             </p>
             <a href="#contato" class="btn btn-light">Entrar em contato</a>
         </section>
