--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                Sou apaixonada pelos alcances da tecnologia e por café. Fascinada por praia, esportes, séries e filmes. 
             </p>
             <p> 
-                Atualmente tenho me dedicado ao estudo nas áreas de Data Science and Data Analysis.
+                Neste momento tenho me dedicado ao estudo nas áreas de Data Science and Data Analysis.
             </p>
             <a href="#contato" class="btn btn-light">Entrar em contato</a>
         </section>
@@ -116,6 +116,14 @@
                     <h5 class="card-title">Instituto Federal da Bahia</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Bacharel Sistemas da Informação</h6>
                 <p class="card-text">Janeiro 2019 - Presente</p>
+                </div>
+            </div>
+
+            <div class="card w-75">
+                <div class="card-body">
+                    <h5 class="card-title">Uniasselvi</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Bacharel Sistemas da Informação</h6>
+                <p class="card-text">Janeiro 2024 - Presente</p>
                 </div>
             </div>
         </section>
