--- a/index.html
+++ b/index.html
@@ -115,15 +115,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Instituto Federal da Bahia</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Bacharel Sistemas da Informação</h6>
-                <p class="card-text">Janeiro 2019 - Presente</p>
-                </div>
-            </div>
-
-            <div class="card w-75">
-                <div class="card-body">
-                    <h5 class="card-title">Uniasselvi</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Bacharel Sistemas da Informação</h6>
-                <p class="card-text">Janeiro 2024 - Presente</p>
+                <p class="card-text">Janeiro 2019 - Julho de 2021 (*Trancado)</p>
                 </div>
             </div>
         </section>
