--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id="sobre">
             <h2 style="margin-top: 1.5em;">Sobre</h2>
             <p>
-                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente estou atuando como Analista de Dados e Planejamento III na @Boticário.
+                Eu sou a <strong>Mylle Braga</strong>, baiana e atualmente estou atuando como Analista de Dados III na @Boticário.
             </p>
             <p>
                Sou apaixonada pelos alcances da tecnologia e por café. Fascinada por praia, esportes, séries e filmes. 
